@@ -14,8 +14,9 @@ python-defaults (2.6.5-6) unstable; urgency=low
       (closes: 583392)
   * debian/rules: do not ignore errors (two more `set -e`s added, closes:
     397499)
-  * python-examples package no longer depends on python (closes: 585780)
   * python-doc now suggests python-examples (closes: #585774)
+  * python package doesn't conflict with python2.1 and python2.3 anymore (2.1
+    and 2.3 are no longer in Debian)
 
   [ Scott Kitterman ]
   * Merge changes back from Ubuntu package:
